# MelEx

./: .gitignore  README.md  best_min_score copy.ipynb  best_min_score.ipynb  comparative_benchmark_results.csv  data.ipynb  data_processing.py  dataset_organize.ipynb  debug.ipynb  dev.ipynb  evaluation_results.csv  f1_pred.ipynb  lr.ipynb  lr_clean.ipynb  optmization.ipynb  output.mid  period.ipynb  profiling.py  pyproject.toml  reorganize_dataset.py  requirements.txt  result_split.csv  results_no_split.csv  song_stats.xlsx  temp_1.ipynb  temp_2.ipynb  test.ipynb  test.py  testset_melodics.xlsx  暗号_output.mid
dataset/My Heart Will Go On/: My Heart Will Go On.bl.mid  My Heart Will Go On.t.mid
dataset/不为谁而作的歌/: 不为谁而作的歌.bl.mid  不为谁而作的歌.gt.mid  不为谁而作的歌.m.mid
dataset/光年之外/: 光年之外.bl.mid  光年之外.gt.mid  光年之外.m.mid  光年之外.t.mid
dataset/凉凉/: 凉凉.bl.mid  凉凉.m.mid
dataset/唯一/: 唯一.m.mid
dataset/想见你想见你想见你/: 想见你想见你想见你.bl.mid  想见你想见你想见你.gt.mid
dataset/慢慢喜欢你/: 慢慢喜欢你.bl.mid  慢慢喜欢你.gt.mid  慢慢喜欢你.t.mid
dataset/明天会更好/: 明天会更好.m.mid  明天会更好.t.mid
dataset/是妈妈是女儿/: 是妈妈是女儿.gt.mid
dataset/暗号/: 暗号.t.mid
dataset/月牙湾/: 月牙湾.bl.mid
dataset/来迟/: 来迟.bl.mid  来迟.gt.mid  来迟.t.mid
dataset/梦一场/: 梦一场.gt.mid
dataset/给电影人的情书/: 给电影人的情书.bl.mid  (+1 more)
dataset_clean/: dataset_summary.txt
dataset_dirty/: dataset_summary.txt
dataset_test/: dataset_summary.txt
exmel/: __init__.py  adt.py  align.py  alignment.py  eval.py  event.py  io.py  pipeline.py  score.py  sequence.py  vis.py  wisp.py
melex/: __init__.py
melign/: __init__.py
mid_files/: anhao_melody.mid  weiyi_baseline.mid  weiyi_rectified.mid  weiyi_transcription.mid
results/: My Heart Will Go On.mid  以父之名.mid  光年之外.mid  凉凉.mid  明天会更好.mid  是妈妈是女儿.mid  月牙湾.mid  来迟.mid  给电影人的情书.mid
results_no_split/: My Heart Will Go On.mid  以父之名.mid  凉凉.mid  想见你想见你想见你.mid  慢慢喜欢你.mid  明天会更好.mid  是妈妈是女儿.mid  月牙湾.mid  来迟.mid  梦一场.mid  野子.mid  黑暗骑士.mid
tests/: benchmark_piano_midi.py  test_piano_midi.py
(+1052 files in other folders)
