[project]
name = "exmel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AnJunHao", email = "55536952+AnJunHao@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "icecream",
    "ipykernel>=6.29.5",
    "matplotlib==3.10.3",
    "mido==1.3.3",
    "numpy==2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pretty-midi>=0.2.10",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
