[project]
name = "melex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AnJunHao", email = "55536952+AnJunHao@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cma>=4.3.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib==3.10.3",
    "mido==1.3.3",
    "numpy==2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pretty-midi>=0.2.10",
    "python-calamine>=0.4.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tinytag>=2.1.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
